[tool.poetry]
name = "zyjj-index-backend"
version = "0.1.0"
description = ""
authors = ["xiaoyou <xiaoyou2333@foxmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
surrealdb = "^1.0.3"
quart = "^0.20.0"
minio = "^7.2.15"
quart-cors = "^0.8.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://nexus.xiaoyou.host/repository/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
